--- a/app/myProfile/myTreatmentCenters/view.html
+++ b/app/myProfile/myTreatmentCenters/view.html
@@ -1,21 +1,18 @@
-<div class="col-md-8 col-sm-8 col-xs-12 col-lg-9">
+<div class="my-treatment-centers">
   <section-heading>My Treatment Centers</section-heading>
   <!-- Content Starts -->
   <div class="col-md-12 col-sm-12 col-lg-12 col-xs-12 padding_0 listing_wrapper_inner">
     <!-- Add treatment center button -->
-    <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 pull-right ">
+    <div class="profile-row">
       <a ui-sref="myProfile.addTreatmentCenter">
-        <div class="col-md-12 col-xs-12 col-sm-12 padding_0">
-          <span class="pull-right modal_btn btn btn-primary margin_bottom_15_add text-right">
-            Add Treatment Center
-          </span>
-        </div>
+        <span class="btn btn-primary adn-btn right">Add Treatment Center</span>
       </a>
     </div>
-    <!-- Center listings in a table -->
-    <center-table centers="$ctrl.currentCenters" on-activate="$ctrl.onActivate(id)" on-delete="$ctrl.open(id)"></center-table>
-    <!-- Pagination -->
-    <pagination page-size="$ctrl.pageSize" total-page="$ctrl.totalPage" current-page="$ctrl.currentPage" on-update="$ctrl.onPageUpdate(page)"></pagination>
-
+    <div class="profile-row">
+      <!-- Center listings in a table -->
+      <center-table centers="$ctrl.currentCenters" on-activate="$ctrl.onActivate(id)" on-delete="$ctrl.open(id)"></center-table>
+      <!-- Pagination -->
+      <pagination page-size="$ctrl.pageSize" total-page="$ctrl.totalPage" current-page="$ctrl.currentPage" on-update="$ctrl.onPageUpdate(page)"></pagination>
+    </div>
   </div>
 </div>
