--- a/app/myProfile/profileNavSection/view.html
+++ b/app/myProfile/profileNavSection/view.html
@@ -1,30 +1,12 @@
-<div class="col-md-4 col-sm-4 col-xs-12 col-lg-3">
-  <div class="sidebar_main">
-    <div class="ul_wrapper_sidebar padding_0">
-      <ul class="main_sidebar padding_0">
-        <!-- Profile Picture-->
-        <li>
-          <div class="img_inner_user_pic">
-            <img ng-src="{{ $ctrl.profilePic }}" class="img-circle" />
-          </div>
-        </li>
-
-        <!-- Navigation-->
-        <li ng-repeat="link in $ctrl.links">
-          <a ui-sref="{{ link.uiSref }}" class="bg_list_page_search">
-            {{ link.name }}
-          </a>
-        </li>
-      </ul>
-    </div>
-  </div>
-  <!--  sidebar main ends  -->
-  <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 padding_0 ">
-    <div class="banner_adjust">
-      <a id="sidebar_ad_url">
-        <img class="img-responsive" id="sidebar_ad">
-      </a>
-    </div>
-  </div>
-
+<div class="profile-nav">
+  <ul class="profile-nav-list">
+    <!-- Profile Picture-->
+    <li>
+      <img ng-src="{{ $ctrl.profilePic }}" class="img-circle" />
+    </li>
+    <!-- Navigation-->
+    <li ng-repeat="link in $ctrl.links">
+      <a ui-sref="{{ link.uiSref }}" class="profile-nav-link">{{ link.name }}  </a>
+    </li>
+  </ul>
 </div>
