--- a/app/myProfile/sub/pagination/view.html
+++ b/app/myProfile/sub/pagination/view.html
@@ -1,4 +1,4 @@
-<nav id="pagination-nav" aria-label="Page navigation">
+<nav class="pagination-nav" aria-label="Page navigation">
   <ul class="pagination">
     <li>
       <a aria-label="Previous" href ng-click="$ctrl.gotoPrevious(i)">
