--- a/app/treatmentCenterDetail/inquiryFormCard/view.html
+++ b/app/treatmentCenterDetail/inquiryFormCard/view.html
@@ -1,54 +1,47 @@
-<div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 padding_0">
-  <div class="right_content center-detail-card">
-    <!-- <div class="detail_heading"> -->
-    <card-heading>Inquiry</card-heading>
-    <!-- </div> -->
-    <form ng-submit="$ctrl.submit()" novalidate="novalidate" __bizdiag="-483366306" __biza="WJ__">
-      <!--　Name -->
-      <div class="adn-row">
-        <div class="col-lg-4 col-ms-4 col-sm-8 col-xs-12">
-          <label class="inquiry-form-label">Name:</label>
-        </div>
-        <div class="col-lg-8 col-md-12 col-sm-12">
-          <input ng-model="$ctrl.name" type="text" class="form-control required" placeholder="Name" name="name" />
-        </div>
+<div class="center-detail-card">
+  <card-heading>Inquiry</card-heading>
+  <form ng-submit="$ctrl.submit()" novalidate="novalidate" __bizdiag="-483366306" __biza="WJ__">
+    <!--　Name -->
+    <div class="adn-row">
+      <div class="col-lg-4 col-ms-4 col-sm-8 col-xs-12">
+        <label class="inquiry-form-label">Name:</label>
       </div>
-
-      <!--　Email -->
-      <div class="adn-row">
-        <div class="col-lg-4 col-ms-4 col-sm-8 col-xs-12">
-          <label class="inquiry-form-label">Email:</label>
-        </div>
-        <div class="col-lg-8 col-md-12 col-sm-12 col-xs-12">
-          <input ng-model="$ctrl.email" type="text" class="form-control required" placeholder="Email" email="true" name="email" />
-        </div>
+      <div class="col-lg-8 col-md-12 col-sm-12">
+        <input ng-model="$ctrl.name" type="text" class="form-control required" placeholder="Name" name="name" />
       </div>
-
-      <!--　Phone -->
-      <div class="adn-row">
-        <div class="col-lg-4 col-ms-4 col-sm-8 col-xs-12">
-          <label class="inquiry-form-label">Phone:</label>
-        </div>
-        <div class="col-lg-8 col-md-12 col-sm-12 col-xs-12">
-          <input ng-model="$ctrl.phone" type="text" class="form-control required" number="true" minlength="10" maxlength="10" placeholder="Phone" name="phone" />
-        </div>
+    </div>
+    <!--　Email -->
+    <div class="adn-row">
+      <div class="col-lg-4 col-ms-4 col-sm-8 col-xs-12">
+        <label class="inquiry-form-label">Email:</label>
       </div>
-
-      <!--　Message -->
-      <div class="adn-row">
-        <div class="col-lg-4 col-ms-4 col-sm-8 col-xs-12">
-          <label class="inquiry-form-label">Message:</label>
-        </div>
-        <div class="col-lg-8 col-md-12 col-sm-12 col-xs-12">
-          <textarea ng-model="$ctrl.message" rows="5" class="form-control required" placeholder="Message" name="message"></textarea>
-        </div>
+      <div class="col-lg-8 col-md-12 col-sm-12 col-xs-12">
+        <input ng-model="$ctrl.email" type="text" class="form-control required" placeholder="Email" email="true" name="email" />
       </div>
-
-      <!--　Submit -->
-      <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 main_wrap_form_inner_sub">
+    </div>
+    <!--　Phone -->
+    <div class="adn-row">
+      <div class="col-lg-4 col-ms-4 col-sm-8 col-xs-12">
+        <label class="inquiry-form-label">Phone:</label>
+      </div>
+      <div class="col-lg-8 col-md-12 col-sm-12 col-xs-12">
+        <input ng-model="$ctrl.phone" type="text" class="form-control required" number="true" minlength="10" maxlength="10" placeholder="Phone" name="phone" />
+      </div>
+    </div>
+    <!--　Message -->
+    <div class="adn-row">
+      <div class="col-lg-4 col-ms-4 col-sm-8 col-xs-12">
+        <label class="inquiry-form-label">Message:</label>
+      </div>
+      <div class="col-lg-8 col-md-12 col-sm-12 col-xs-12">
+        <textarea ng-model="$ctrl.message" rows="5" class="form-control required" placeholder="Message" name="message"></textarea>
+      </div>
+    </div>
+    <!--　Submit -->
+    <div class="adn-row">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
         <input type="submit" class="btn btn-primary modal_btn pull-right" value="submit" />
       </div>
-    </form>
-
-  </div>
+    </div>
+  </form>
 </div>
