--- a/app/treatmentCenterDetail/reviewFormBox/view.html
+++ b/app/treatmentCenterDetail/reviewFormBox/view.html
@@ -17,7 +17,7 @@
 
       <div class="adn-row">
         <div class="col-md-4 col-sm-4 col-xs-12">
-          <label for="userf">Name: </label>
+          <label >Name: </label>
         </div>
         <div class="col-md-8 col-sm-8 col-xs-12">
           <input ng-model="$ctrl.name" name="username" type="text" class="form-control required comm" placeholder="Name" />
