--- a/app/home/view.html
+++ b/app/home/view.html
@@ -1,5 +1,16 @@
 <div class="container">
   <div class="row">
+    <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12" ng-if="$ctrl.sliders && $ctrl.sliders.length > 0">
+      <div uib-carousel active="$ctrl.active" interval="$ctrl.myInterval" no-wrap="$ctrl.noWrapSlides">
+        <div uib-slide ng-repeat="slide in $ctrl.sliders track by $index" index="$index">
+          <img ng-src="{{slide.content_url}}" style="margin:auto;">
+          <div class="carousel-caption">
+            <h4>Slide {{slide.id}}</h4>
+            <p>{{slide.text}}</p>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="col-lg-8 col-sm-8 col-md-8 col-xs-12">
       <div class="left_content">
         <!-- Welcome Section -->
