--- a/app/index.html
+++ b/app/index.html
@@ -231,7 +231,7 @@
                 </fieldset>
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 padding_0 modal_inner_adj text-center">
                   <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                  <input type="submit" class="btn btn-primary modal_btn" value="Sign In">
+                  <input type="submit" class="btn modal_btn" value="Sign In">
                 </div>
               </form>
             </div>
@@ -279,7 +279,7 @@
                   <!-- Multiple Checkboxes (inline) -->
                 </fieldset>
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 padding_0 modal_inner_adj text-center">
-                  <input type="submit" class="btn btn-primary modal_btn" value="Send">
+                  <input type="submit" class="btn modal_btn" value="Send">
                 </div>
               </form>
             </div>
