--- a/app/login/view.html
+++ b/app/login/view.html
@@ -21,7 +21,7 @@
         </div>
         <div class="col-md-12 col-sm-12 col-xs-12 margin-bottom-10">
           <div class="log_btn_div btms_spaces btn_bottom_gap">
-            <input class="btn btn-primary modal_btn pull-right" value="Login" type="submit">
+            <input class="btn adn-btn right" value="Login" type="submit">
           </div>
           <div id="error_if"></div>
         </div>
