--- a/app/myProfile/bannerAds/edit/view.html
+++ b/app/myProfile/bannerAds/edit/view.html
@@ -3,7 +3,7 @@
   <div class="profile-content">
     <div class="profile-row">
       <a href="javascript:history.go(-1);">
-        <span class="btn btn-primary adn-btn right">
+        <span class="btn adn-btn right">
           <i class="glyphicon glyphicon-hand-left"></i> Back
         </span>
       </a>
@@ -54,7 +54,7 @@
           </div>
         </div>
         <div class="text-right col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub sub">
-          <input class="btn btn-primary modal_btn btn_size pull-right" value="Submit" id="submit" type="button" ng-click="$ctrl.submit()" ng-disabled="advertisementEditForm.position.$invalid || advertisementEditForm.center_web_link.$invalid || advertisementEditForm.name.$invalid">
+          <input class="btn modal_btn btn_size pull-right" value="Submit" id="submit" type="button" ng-click="$ctrl.submit()" ng-disabled="advertisementEditForm.position.$invalid || advertisementEditForm.center_web_link.$invalid || advertisementEditForm.name.$invalid">
         </div>
       </form>
     </div>
