--- a/app/myProfile/sponsorAds/edit/view.html
+++ b/app/myProfile/sponsorAds/edit/view.html
@@ -3,7 +3,7 @@
   <div class="profile-content">
     <div class="profile-row">
       <a href="javascript:history.go(-1);">
-        <span class="btn btn-primary adn-btn right">
+        <span class="btn adn-btn right">
           <i class="glyphicon glyphicon-hand-left"></i> Back
         </span>
       </a>
@@ -92,7 +92,7 @@
         <!-- Submit -->
         <div class="adn-row">
           <div class="col-lg-8 col-lg-offset-4 col-md-8 col-md-offset-4 col-md-offset-4 col-sm-12 col-xs-12">
-            <button type="submit" class="btn btn-primary adn-btn right" ng-disabled="sponsorAdsEdit.sponsor_ad_website.$invalid || sponsorAdsEdit.sponsor_ad_description.$invalid  || sponsorAdsEdit.title.$invalid || sponsorAdsEdit.name.$invalid">Review</button>
+            <button type="submit" class="btn adn-btn right" ng-disabled="sponsorAdsEdit.sponsor_ad_website.$invalid || sponsorAdsEdit.sponsor_ad_description.$invalid  || sponsorAdsEdit.title.$invalid || sponsorAdsEdit.name.$invalid">Review</button>
           </div>
         </div>
       </form>
