--- a/app/myProfile/sponsorAds/view.html
+++ b/app/myProfile/sponsorAds/view.html
@@ -3,7 +3,7 @@
   <div class="profile-content">
     <div class="profile-row">
       <a ui-sref="myProfile.sponsorAdsAdd">
-        <span class="btn btn-primary adn-btn right">Add Sponsor Ad</span>
+        <span class="btn adn-btn right">Add Sponsor Ad</span>
       </a>
     </div>
     <div class="profile-row">
