--- a/app/myProfile/sub/centerTable/view.html
+++ b/app/myProfile/sub/centerTable/view.html
@@ -14,7 +14,7 @@
       <tbody>
         <tr ng-repeat="center in $ctrl.centers">
           <!-- Image -->
-          <td data-title="Image" class="block_make">
+          <td data-title="Image">
             <a ui-sref="{{ center.viewLink }}">
               <img ng-src="{{ center.listing_image }}" alt="{{ center.center_name }}" class="center-logo-in-tb" />
             </a>
