--- a/app/treatmentCenterMap/searchSidePanel/view.html
+++ b/app/treatmentCenterMap/searchSidePanel/view.html
@@ -71,7 +71,7 @@
           </div>
         </div>
         <div class="adn-row">
-          <input type="submit" class="btn btn-primary border_radius_add modal_btn text-center" value="submit" />
+          <input type="submit" class="btn adn-btn border_radius_add" value="submit" />
         </div>
       </div>
     </div>
