--- a/app/myProfile/accountSettings/view.html
+++ b/app/myProfile/accountSettings/view.html
@@ -4,7 +4,7 @@
   <div class="profile-content">
     <div class="profile-row">
       <a href="javascript:history.go(-1);">
-        <span class="btn btn-primary adn-btn right">
+        <span class="btn adn-btn right">
           <i class="glyphicon glyphicon-hand-left"></i>Back
         </span>
       </a>
@@ -120,7 +120,7 @@
             <div class="">
               <!-- bg_file_input  -->
               <a href="javascript:void(0)">
-                <input file-model="$ctrl.profile_pic" type="file" name="profile_image" class="profile_img" />
+                <input file-model="$ctrl.profile_pic" type="file" name="profile_image" class="profile_img bg_file_input" />
               </a>
             </div>
           </div>
@@ -129,7 +129,7 @@
         <!-- Submit -->
         <div class="adn-row">
           <div class="col-lg-8 col-lg-offset-4 col-md-8 col-md-offset-4 col-md-offset-4 col-sm-12 col-xs-12">
-            <button type="submit" class="btn btn-primary adn-btn right">Submit</button>
+            <button type="submit" class="btn adn-btn right">Submit</button>
           </div>
         </div>
       </form>
