--- a/app/myProfile/bannerAds/add/view.html
+++ b/app/myProfile/bannerAds/add/view.html
@@ -3,7 +3,7 @@
   <div class="profile-content">
     <div class="profile-row">
       <a href="javascript:history.go(-1);">
-        <span class="modal_btn btn btn-primary margin_bottom_15_add pull-right  text-right">
+        <span class="btn adn-btn right">
           <i class="glyphicon glyphicon-hand-left"></i> Back
         </span>
       </a>
@@ -60,7 +60,7 @@
         <!-- Submit -->
         <div class="adn-row">
           <div class="col-lg-8 col-lg-offset-4 col-md-8 col-md-offset-4 col-md-offset-4 col-sm-12 col-xs-12">
-            <button type="submit" class="btn btn-primary adn-btn right" ng-disabled="advertisementForm.position.$invalid || advertisementForm.center_web_link.$invalid ||  advertisementForm.name.$invalid">Submit</button>
+            <button type="submit" class="btn adn-btn right" ng-disabled="advertisementForm.position.$invalid || advertisementForm.center_web_link.$invalid ||  advertisementForm.name.$invalid">Submit</button>
           </div>
         </div>
       </form>
