--- a/app/myProfile/bannerAds/view.html
+++ b/app/myProfile/bannerAds/view.html
@@ -3,7 +3,7 @@
   <div class="profile-content">
     <div class="profile-row">
       <a ui-sref="myProfile.bannerAdsAdd">
-        <span class="btn btn-primary adn-btn right">Add Banner Ad</span>
+        <span class="btn adn-btn right">Add Banner Ad</span>
       </a>
     </div>
     <div class="profile-row">
