--- a/app/myProfile/editTreatmentCenter/view.html
+++ b/app/myProfile/editTreatmentCenter/view.html
@@ -4,7 +4,7 @@
   <div class="profile-content">
     <div class="profile-row">
       <a href="javascript:history.go(-1);">
-        <span class="btn btn-primary adn-btn right">
+        <span class="btn adn-btn right">
           <i class="glyphicon glyphicon-hand-left"></i> Back
         </span>
       </a>
@@ -197,7 +197,7 @@
         <!-- Submit -->
         <div class="adn-row">
           <div class="col-lg-8 col-lg-offset-4 col-md-8 col-md-offset-4 col-md-offset-4 col-sm-12 col-xs-12">
-            <button type="submit" class="btn btn-primary adn-btn right">Submit</button>
+            <button type="submit" class="btn adn-btn right">Submit</button>
           </div>
         </div>
       </form>
