--- a/app/myProfile/paymentDetails/view.html
+++ b/app/myProfile/paymentDetails/view.html
@@ -3,7 +3,7 @@
   <div class="profile-content">
     <div class="profile-row">
       <a ui-sref="myProfile.paymentDetailsAdd">
-        <span class="btn btn-primary adn-btn right">Add Payment Details
+        <span class="btn adn-btn right">Add Payment Details
         </span>
       </a>
     </div>
