--- a/app/myProfile/profileMain/view.html
+++ b/app/myProfile/profileMain/view.html
@@ -3,7 +3,7 @@
   <div class="profile-content">
     <div class="profile-row">
       <a ui-sref="myProfile.addTreatmentCenter">
-        <span class="btn btn-primary adn-btn right">Add Treatment Center</span>
+        <span class="btn adn-btn right">Add Treatment Center</span>
       </a>
     </div>
     <div class="profile-row">
