--- a/app/sidePanel/areaFilterCard/view.html
+++ b/app/sidePanel/areaFilterCard/view.html
@@ -1,16 +1,14 @@
-<div ng-show="$ctrl.display" class="col-lg-12 col-sm-12 col-md-12 col-xs-12 padding_0">
-  <div class="right_content">
-    <card-heading>Filter</card-heading>
-    <ul class="list-unstyled">
-      <li class="clearfix">
-        <a href class="area-filter-link" ng-class="$ctrl.stateLinkClass" ng-click="$ctrl.goToState()">{{ $ctrl.stateName }}</a>
-      </li>
-      <li class="clearfix">
-        <a href class="area-filter-link" ng-click="$ctrl.goToCities()">View All Cities</a>
-      </li>
-      <li class="clearfix">
-        <a href class="area-filter-link" ng-click="$ctrl.goToCounties()">View All Counties</a>
-      </li>
-    </ul>
-  </div>
+<div ng-show="$ctrl.display" class="side-card">
+  <card-heading>Filter</card-heading>
+  <ul class="list-unstyled">
+    <li>
+      <a href class="area-filter-link" ng-class="$ctrl.stateLinkClass" ng-click="$ctrl.goToState()">{{ $ctrl.stateName }}</a>
+    </li>
+    <li>
+      <a href class="area-filter-link" ng-click="$ctrl.goToCities()">View All Cities</a>
+    </li>
+    <li>
+      <a href class="area-filter-link" ng-click="$ctrl.goToCounties()">View All Counties</a>
+    </li>
+  </ul>
 </div>
