--- a/app/sidePanel/sideCard/view.html
+++ b/app/sidePanel/sideCard/view.html
@@ -1,13 +1,11 @@
-<div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 padding_0">
-  <div class="right_content">
-    <card-heading>{{ $ctrl.filter }}</card-heading>
-    <ul class="list-unstyled">
-      <li ng-repeat="listing in $ctrl.listings">
-        <a ui-sref="{{ listing.uiSref }}">
-          <span class="glyphicon glyphicon-chevron-right"></span>
-          {{ listing.name }}
-        </a>
-      </li>
-    </ul>
-  </div>
+<div class="side-card">
+  <card-heading>{{ $ctrl.filter }}</card-heading>
+  <ul class="list-unstyled">
+    <li ng-repeat="listing in $ctrl.listings">
+      <a ui-sref="{{ listing.uiSref }}">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        {{ listing.name }}
+      </a>
+    </li>
+  </ul>
 </div>
