--- a/app/sidePanel/view.html
+++ b/app/sidePanel/view.html
@@ -1,14 +1,10 @@
 <div class="col-lg-4 col-sm-4 col-md-4 col-xs-12 ">
   <find-treatment-side-card></find-treatment-side-card>
   <area-filter-card></area-filter-card>
-  <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 padding_0">
-    <div class="right_content">
-      <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 padding_0 ">
-        <a id="sidebar_ad_url">
-          <img class="img-responsive" id="sidebar_ad">
-        </a>
-      </div>
-    </div>
+  <div class="side-card">
+    <a id="sidebar_ad_url">
+      <img class="img-responsive" id="sidebar_ad">
+    </a>
   </div>
   <side-card type="Demographic"></side-card>
   <side-card type="Treatment Approach"></side-card>
