--- a/app/treatmentCenterDetail/inquiryFormCard/view.html
+++ b/app/treatmentCenterDetail/inquiryFormCard/view.html
@@ -40,7 +40,7 @@
     <!--　Submit -->
     <div class="adn-row">
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-        <input type="submit" class="btn btn-primary modal_btn pull-right" value="submit" />
+        <input type="submit" class="btn adn-btn adn-btn-full" value="submit" />
       </div>
     </div>
   </form>
