--- a/app/myProfile/paymentDetails/view.html
+++ b/app/myProfile/paymentDetails/view.html
@@ -13,7 +13,7 @@
           <table class="col-md-12 col-xs-12 col-sm-12  table-striped table-condensed cf padding_0">
             <thead class="cf">
               <tr>
-                <th>First Name</th>
+                <th>Name</th>
                 <th>Card Number</th>
                 <th>Card Type</th>
                 <th class="width_adjust_tb">Action</th>
