--- a/app/myProfile/paymentDetails/add/view.html
+++ b/app/myProfile/paymentDetails/add/view.html
@@ -27,7 +27,7 @@
 
         <div class="adn-row">
           <div class="col-md-4 col-sm-4 col-xs-12">
-            <label for="name">Card Name: </label>
+            <label for="name">Name: </label>
           </div>
           <div class="col-md-3 col-sm-3 col-xs-12">
             <input placeholder="First Name" name="firstName" class="form-control" type="text" ng-model="$ctrl.firstName" ng-minlength="2" ng-maxlength="25" required="">
