modified add listing page

--- a/app/myProfile/editTreatmentCenter/view.html
+++ b/app/myProfile/editTreatmentCenter/view.html
@@ -176,7 +176,7 @@
             <label for="gallery"></label>
           </div>
           <div class="col-md-8 col-sm-8 col-xs-12">
-            <thumbnail-delete ng-repeat="imgUrl in $ctrl.center_images track by $index" imgUrl="imgUrl" on-delete="$ctrl.deleteImage(imgUrl)"></thumbnail-delete>
+            <thumbnail-delete ng-repeat="imgUrl in $ctrl.center_images track by $index" imgurl="imgUrl" on-delete="$ctrl.deleteImage(imgUrl)"></thumbnail-delete>
           </div>
         </div>
 
