--- a/app/addListing/centerInfo/view.html
+++ b/app/addListing/centerInfo/view.html
@@ -1,11 +1,21 @@
 <div class="row">
   <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
+    <!-- <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+      <div class="col-md-4 col-sm-4 col-xs-12">
+        <label for="cpwd">Select Category:
+        </label>
+      </div>
+      <div class="col-md-8 col-sm-8 col-xs-12">
+        <div ng-dropdown-multiselect="" options="$root.addListingCategories" checkboxes="true" selected-model="$root.multiselectModelCategories" extra-settings="$root.multiselectModelSettings" name="categories"></div>
+        <p class="help-block">Required</p>
+      </div>
+    </div> -->
     <div class="adn-row">
       <div class="col-md-4 col-sm-4 col-xs-12">
         <label>Treatment Center Name</label>
       </div>
       <div class="col-md-8 col-sm-8 col-xs-12">
-        <input placeholder="Treatment Center Name" name="center_name" class="form-control required" type="text" required="true" ng-model="$ctrl.center_name">
+        <input placeholder="Treatment Center Name" name="center_name" class="form-control required" type="text" required="true" ng-model="$root.center_name">
         <p ng-show="$root.addlistForm.center_name.$invalid" class="help-block">Required</p>
       </div>
     </div>
@@ -14,8 +24,8 @@
         <label>Website </label>
       </div>
       <div class="col-md-8 col-sm-8 col-xs-12">
-        <input placeholder="www.google.com" id="center_web_link" url="true" name="center_web_link" class="form-control required" type="text" ng-model="$ctrl.center_web_link" ng-pattern="/^(?:(ftp|http|https):\/\/)?(?:[\w-]+\.)+[a-z]{2,10}$/">
-        <span ng-show="$root.addlistForm.center_web_link.$invalid" class="help-block ng-hide">Invalid Format(Correct format: www.google.com)</span>
+        <input placeholder="www.google.com" id="center_web_link" url="true" name="center_web_link" class="form-control required" type="text" ng-model="$root.center_web_link" ng-pattern="/^(?:(ftp|http|https):\/\/)?(?:[\w-]+\.)+[a-z]{2,10}$/">
+        <p ng-show="$root.addlistForm.center_web_link.$invalid" class="help-block ng-hide">Invalid Format(Correct format: www.google.com)</p>
       </div>
     </div>
     <div class="adn-row">
@@ -23,7 +33,7 @@
         <label>Intake Email</label>
       </div>
       <div class="col-md-8 col-sm-8 col-xs-12">
-        <input placeholder="Intake Email " id="intakeemail" name="intakeemail" class="form-control required" email="true" type="text" ng-model="$ctrl.intakeemail" required="true" ng-pattern="/^(([^<>()\[\]\.,;:\s@\']+(\.[^<>()\[\]\.,;:\s@\']+)*)|(\'.+\'))@(([^<>()[\]\.,;:\s@\']+\.)+[^<>()[\]\.,;:\s@\']{2,})$/i">
+        <input placeholder="Intake Email " id="intakeemail" name="intakeemail" class="form-control required" email="true" type="text" ng-model="$root.intakeemail" required="true" ng-pattern="/^(([^<>()\[\]\.,;:\s@\']+(\.[^<>()\[\]\.,;:\s@\']+)*)|(\'.+\'))@(([^<>()[\]\.,;:\s@\']+\.)+[^<>()[\]\.,;:\s@\']{2,})$/i">
         <p ng-show="$root.addlistForm.intakeemail.$invalid" class="help-block">Required and please enter valid email</p>
       </div>
     </div>
@@ -32,7 +42,7 @@
         <label>Intake Phone</label>
       </div>
       <div class="col-md-8 col-sm-8 col-xs-12">
-        <input placeholder="Intake Phone" id="intakephone" name="intakephone" class="form-control required" ng-minlength="10" ng-maxlength="10" maxlength="10" ng-pattern="/^-?[0-9+]*$/" type="text" ng-model="$ctrl.intakephone" required="true">
+        <input placeholder="Intake Phone" id="intakephone" name="intakephone" class="form-control required" ng-minlength="10" ng-maxlength="10" maxlength="10" ng-pattern="/^-?[0-9+]*$/" type="text" ng-model="$root.intakephone" required="true">
         <p ng-show="$root.addlistForm.intakephone.$invalid" class="help-block">Required and phone number must be 10 digits long</p>
       </div>
     </div>
@@ -41,7 +51,7 @@
         <label>Description</label>
       </div>
       <div class="col-md-8 col-sm-8 col-xs-12">
-        <textarea name="description" ng-model="$ctrl.description" class="form-control required" rows="2" cols="50" placeholder="Brief Overview" required="true"></textarea>
+        <textarea name="description" ng-model="$root.description" class="form-control required" rows="2" cols="50" placeholder="Brief Overview" required="true"></textarea>
         <p ng-show="$root.addlistForm.description.$error.required">Required</p>
       </div>
     </div>
@@ -50,7 +60,7 @@
         <label for="web_link">Logo:</label>
       </div>
       <div class="col-md-8 col-sm-8 col-xs-12">
-        <input name="listing_image[]" id="listing_image" file-model="$ctrl.listing_image" class="span2 text_file multi center_image" type="file" accept="image/*">
+        <input name="listing_image[]" id="listing_image" file-model="$root.listing_image" class="span2 text_file multi center_image" type="file" accept="image/*">
       </div>
     </div>
     <div class="adn-row">
@@ -58,7 +68,7 @@
         <label>Street Address</label>
       </div>
       <div class="col-md-8 col-sm-8 col-xs-12">
-        <input name="address_line_1" class="form-control required" type="text" ng-model="$ctrl.address_line_1" placeholder="Street Address" required="true">
+        <input name="address_line_1" class="form-control required" type="text" ng-model="$root.address_line_1" placeholder="Street Address" required="true">
         <p ng-show="$root.addlistForm.address_line_1.$invalid">Required</p>
       </div>
     </div>
@@ -67,9 +77,9 @@
         <label>State</label>
       </div>
       <div class="col-md-8 col-sm-8 col-xs-12">
-        <select required="true" ng-change="$ctrl.getCities()" name="state" ng-model="$ctrl.state">
+        <select required="true" ng-change="$root.getCities()" name="state" ng-model="$root.state">
           <option value="">Select State</option>
-          <option ng-repeat="states in $ctrl.states track by $index" value="{{states}}">{{states}}</option>
+          <option ng-repeat="states in $root.states track by $index" value="{{states}}">{{states}}</option>
         </select>
         <p ng-show="$root.addlistForm.state.$invalid">Required</p>
       </div>
@@ -79,9 +89,9 @@
         <label>City</label>
       </div>
       <div class="col-md-8 col-sm-8 col-xs-12">
-        <select ng-model="$ctrl.city" name="city" required="true">
+        <select ng-model="$root.city" name="city" required="true">
           <option value="">Select City</option>
-          <option ng-repeat="cities in $ctrl.cities track by $index" value="{{cities}}">{{cities}}</option>
+          <option ng-repeat="cities in $root.cities track by $index" value="{{cities}}">{{cities}}</option>
         </select>
         <p ng-show="$root.addlistForm.city.$invalid">Required</p>
       </div>
@@ -91,7 +101,7 @@
         <label>Country</label>
       </div>
       <div class="col-md-8 col-sm-8 col-xs-12">
-        <input placeholder="Country" id="country" name="country" class="form-control required" type="text" ng-model="$ctrl.country">
+        <input placeholder="Country" id="country" name="country" class="form-control required" type="text" ng-model="$root.country">
       </div>
     </div>
     <div class="adn-row">
@@ -99,15 +109,17 @@
         <label>Zip</label>
       </div>
       <div class="col-md-8 col-sm-8 col-xs-12">
-        <input placeholder="Zip" id="pincode" name="pincode" class="form-control required" number="true" minlength="5" maxlength="5" type="text" ng-model="$ctrl.pincode" ng-pattern="/^\d{5}$/" required="true">
-        <p ng-show="$root.addlistForm.pincode.$invalid" class="help-block">Zip code must be 5 digits</p>
+        <input placeholder="Zip" id="pincode" name="pincode" class="form-control required" number="true" minlength="5" maxlength="5" type="text" ng-model="$root.pincode" ng-pattern="/^\d{5}$/" required="true">
+        <p ng-show="$root.addlistForm.pincode.$invalid" class="help-block">Required and Zip code must be 5 digits</p>
       </div>
     </div>
     <div class="text-right col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub sub">
       <input class="btn modal_btn btn_size pull-left" value="Previous" type="button" ng-click="$ctrl.previous()">
-      <input class="btn modal_btn btn_size pull-left" value="Next" id="submit" type="button" ng-click="$ctrl.saveStep3()" ng-disabled="$root.addlistForm.email.$invalid || $root.addlistForm.username.$error.required || $root.addlistForm.password.$invalid || $root.addlistForm.confirm_password.$error.noMatch">
-
+      <input class="btn modal_btn btn_size pull-left" value="Next" id="submit" type="button" ng-click="$root.saveStep3()" ng-disabled="$root.addlistForm.center_name.$invalid ||  $root.addlistForm.center_web_link.$invalid ||  $root.addlistForm.pincode.$error.required ||
+      $root.addlistForm.pincode.$invalid ||
+      $root.addlistForm.intakephone.$error.required ||
+      $root.addlistForm.intakephone.$invalid ||
+      $root.addlistForm.description.$error.required || $root.addlistForm.city.$error.required || $root.addlistForm.state.$error.required || $root.addlistForm.center_name.$error.required || $root.addlistForm.user_last_name.$error.required || $root.addlistForm.user_first_name.$error.required || $root.addlistForm.user_company.$error.required || $root.addlistForm.user_phone.$error.required || $root.addlistForm.intakeemail.$error.required || $root.addlistForm.username.$error.required || $root.addlistForm.address_line_1.$error.required">
     </div>
-
   </div>
 </div>
