membership table changed

--- a/app/addListing/paidMember/view.html
+++ b/app/addListing/paidMember/view.html
@@ -4,19 +4,125 @@
       <h3 class="sub_heading_under_sign_up">Advantages of becoming paid member :</h3>
     </div>
     <div class="adn-row">
-      <table class="table table-bordered">
+      <table class="table table-bordered membership-table">
         <thead>
           <tr>
-            <th>Free</th>
-            <th>Payed</th>
-            <th>Featured</th>
+            <th></th>
+            <th>
+              <div class="pricing-header ">
+                <h4 class="package-title">
+                  FREE
+                </h4>
+                <h4 class="package-pricing">
+                  <p class="package-billing">
+                    <button type="button" class="btn btn-success">Sign Up</button>
+                  </p>
+                </h4>
+              </div>
+            </th>
+            <th>
+              <div class="pricing-header ">
+                <h4 class="package-title">
+                  Payed
+                </h4>
+                <p class="package-billing">
+                  <button type="button" class="btn btn-success">Sign Up</button>
+                </p>
+              </div>
+            </th>
+            <th>
+              <div class="pricing-header ">
+                <h4 class="package-title">
+                  Featured
+                </h4>
+                <p class="package-billing">
+                  <button type="button" class="btn btn-success">Sign Up</button>
+                </p>
+              </div>
+            </th>
           </tr>
         </thead>
         <tbody>
+          <tr class="tr-background">
+            <td>Survey</td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
           <tr>
+            <td>Type</td>
             <td>Free</td>
             <td>Payed</td>
             <td>Featured</td>
+          </tr>
+          <tr>
+            <td>Type</td>
+            <td><i class="fa fa-check-circle" aria-hidden="true"></i>
+            </td>
+            <td>Payed</td>
+            <td><i class="fa fa-check-circle" aria-hidden="true"></i>
+            </td>
+          </tr>
+          <tr>
+            <td>Type</td>
+            <td><i class="fa fa-check-circle" aria-hidden="true"></i>
+            </td>
+            <td>Payed</td>
+            <td>Featured</td>
+          </tr>
+          <tr>
+            <td>Type</td>
+            <td><i class="fa fa-check-circle" aria-hidden="true"></i>
+            </td>
+            <td>Payed</td>
+            <td><i class="fa fa-check-circle" aria-hidden="true"></i>
+            </td>
+          </tr>
+          <tr>
+            <td>Type</td>
+            <td>Free</td>
+            <td><i class="fa fa-check-circle" aria-hidden="true"></i>
+            </td>
+            <td>Featured</td>
+          </tr>
+          <tr>
+            <td>Type</td>
+            <td>Free</td>
+            <td>Payed</td>
+            <td><i class="fa fa-check-circle" aria-hidden="true"></i>
+            </td>
+          </tr>
+          <tr>
+            <td>Type</td>
+            <td>Free</td>
+            <td><i class="fa fa-check-circle" aria-hidden="true"></i>
+            </td>
+            <td>Featured</td>
+          </tr>
+          <tr>
+            <td>Type</td>
+            <td>Free</td>
+            <td>Payed</td>
+            <td><i class="fa fa-check-circle" aria-hidden="true"></i>
+            </td>
+          </tr>
+          <tr>
+            <td></td>
+            <td>
+              <p>
+                <button type="button" class="btn btn-success">Sign Up</button>
+              </p>
+            </td>
+            <td>
+              <p>
+                <button type="button" class="btn btn-success">Sign Up</button>
+              </p>
+            </td>
+            <td>
+              <p>
+                <button type="button" class="btn btn-success">Sign Up</button>
+              </p>
+            </td>
           </tr>
         </tbody>
       </table>
