--- a/app/addListing/contactInfo/view.html
+++ b/app/addListing/contactInfo/view.html
@@ -34,8 +34,8 @@
         <label>Phone</label>
       </div>
       <div class="col-md-8 col-sm-8 col-xs-12">
-        <input placeholder="Phone" name="user_phone" class="form-control required" type="text" required="true" ng-minlength="10" ng-maxlength="10" ng-pattern="/^-?[0-9+]*$/" restrict="reject" maxlength="10" ng-model="$root.phone">
-        <p ng-show="$root.addlistForm.user_phone.$invalid" class="help-block">Required and phone number must be 10 digits</p>
+        <input placeholder="Phone" name="user_phone" class="form-control required" type="text" required="true" ng-minlength="10" ng-maxlength="12" ng-pattern="/^(\([0-9]{3}\) |[0-9]{3}-)[0-9]{3}-[0-9]{4}$/" restrict="reject" maxlength="12" ng-model="$root.phone">
+        <p ng-show="$root.addlistForm.user_phone.$invalid" class="help-block">Required and correct US number format: 303-557-5899, should be 10 digits</p>
       </div>
     </div>
 
