--- a/app/addListing/paidMember/view.html
+++ b/app/addListing/paidMember/view.html
@@ -15,7 +15,7 @@
                 </h4>
                 <h4 class="package-pricing">
                   <p class="package-billing">
-                    <button type="button" class="btn btn-success">Sign Up</button>
+                    <button type="button" ng-click="$ctrl.submit()" class="btn btn-success">Sign Up</button>
                   </p>
                 </h4>
               </div>
@@ -26,7 +26,7 @@
                   Payed
                 </h4>
                 <p class="package-billing">
-                  <button type="button" class="btn btn-success">Sign Up</button>
+                  <button type="button" ng-click="$ctrl.submit()" class="btn btn-success">Sign Up</button>
                 </p>
               </div>
             </th>
@@ -36,7 +36,7 @@
                   Featured
                 </h4>
                 <p class="package-billing">
-                  <button type="button" class="btn btn-success">Sign Up</button>
+                  <button type="button" ng-click="$ctrl.submit()" class="btn btn-success">Sign Up</button>
                 </p>
               </div>
             </th>
@@ -106,30 +106,13 @@
             <td><i class="fa fa-check-circle" aria-hidden="true"></i>
             </td>
           </tr>
-          <tr>
-            <td></td>
-            <td>
-              <p>
-                <button type="button" class="btn btn-success">Sign Up</button>
-              </p>
-            </td>
-            <td>
-              <p>
-                <button type="button" class="btn btn-success">Sign Up</button>
-              </p>
-            </td>
-            <td>
-              <p>
-                <button type="button" class="btn btn-success">Sign Up</button>
-              </p>
-            </td>
-          </tr>
+
         </tbody>
       </table>
     </div>
     <div class="text-right col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub sub">
-      <input class="btn modal_btn btn_size pull-left" value="Previous" type="button" ng-click="$ctrl.previous()">
-      <input class="btn modal_btn btn_size pull-left" value="Next" id="submit" type="button" ng-click="$root.submit()">
+      <input class="btn modal_btn btn_size pull-left" value="Next" id="submit" type="button" ng-click="$ctrl.submit()">
+      <input class="btn modal_btn btn_size pull-left" value="Finish" id="finish" type="button" ng-click="$ctrl.finish()">
     </div>
   </div>
 </div>
